--- a/app/src/main/res/layout/activity_supplier.xml
+++ b/app/src/main/res/layout/activity_supplier.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Input Product Name"
+        android:inputType="text"
         android:textSize="19dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="20dp"
@@ -46,21 +47,29 @@
             android:textSize="19dp"
             android:layout_marginLeft="10dp"
             />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="  Insert Product Image"
-        android:textSize="19dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upload Photo   "
+            android:textSize="19dp"
+            android:layout_marginLeft="10dp"
+            />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:id="@+id/TakePicture"
+        android:background="@drawable/ic_baseline_photo_camera_24"
+        />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <TextView
-            android:id="@+id/photo"
-            android:layout_width="250dp"
-            android:layout_marginTop="10dp"
-            android:layout_height="120dp"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/line"
-            android:padding="10dp"/>
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@mipmap/ic_launcher"/>
+
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,7 +91,8 @@
             />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-<EditText
+
+    <EditText
     android:id="@+id/seller_description"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -115,15 +125,16 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <EditText
-        android:id="@+id/price"
+        android:id="@+id/price_seller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/line"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="20dp"
+        android:inputType="text"
+        android:background="@drawable/line"
         android:hint="Ksh..."
-        android:padding="5dp"
-        />
+        android:padding="5dp" />
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -153,6 +164,7 @@
         android:background="@drawable/line"
         android:hint="county..."
         android:layout_marginRight="20dp"
+        android:inputType="text"
         android:layout_marginLeft="30dp"
         android:padding="5dp"
         android:completionThreshold="1"
@@ -185,6 +197,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/line"
         android:layout_marginRight="20dp"
+        android:inputType="text"
         android:hint="+254..."
         android:layout_marginLeft="30dp"
         android:padding="5dp"
@@ -198,7 +211,7 @@
         android:background="@drawable/btn"
         android:text="sell PRODUCT"
         android:textSize="16dp"
-        android:id="@+id/Sell"
+        android:id="@+id/sell_maps"
         />
 
 
