--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Ripple">#f816a463</color>
     <color name="btn">#bf2af5</color>
-    <color name="blueish">#009EFD</color>
+    <color name="blueish">#378D37</color>
     <color name="red">#FB0707</color>
     <color name="mine">#3DE6D6</color>
     <color name="orange">#EF683E</color>
