--- a/app/src/main/res/layout/activity_supplier.xml
+++ b/app/src/main/res/layout/activity_supplier.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SupplierActivity"
@@ -58,17 +64,19 @@
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="50dp"
         android:layout_height="40dp"
-        android:id="@+id/TakePicture"
+        android:id="@+id/btnCapture"
+        android:onClick="TakePhoto"
         android:background="@drawable/ic_baseline_photo_camera_24"
         />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <ImageView
-        android:id="@+id/photo"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@mipmap/ic_launcher"/>
 
+    <ImageView
+        android:id="@+id/image_product"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/line" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
@@ -220,3 +228,4 @@
 
 
 </LinearLayout>
+</ScrollView>
